--- a/GSDSimCLR.ipynb
+++ b/GSDSimCLR.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "torch.Size([256, 3, 224, 224])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,6 +181,91 @@
     "- Encoder ~ResNet50 18FEB2024\n",
     "- Projection Head ~MultiLayerPerceptron with one hidden layer 18FEB2024\n",
     "- NT Xent Loss Temperature ~0.2 18FEB2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Identity(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Identity, self).__init__()\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return x\n",
+    "\n",
+    "class LinearLayer(nn.Module):\n",
+    "    def __init__(self,\n",
+    "                 in_features,\n",
+    "                 out_features,\n",
+    "                 use_bias = True,\n",
+    "                 use_bn = False,\n",
+    "                 **kwargs):\n",
+    "        super(LinearLayer, self).__init__(**kwargs)\n",
+    "        self.in_features = in_features\n",
+    "        self.out_features = out_features\n",
+    "        self.use_bias = use_bias\n",
+    "        self.use_bn = use_bn\n",
+    "\n",
+    "        self.linear = nn.Linear(self.in_features, self.out_features, bias=self.use_bias and not self.use_bn)\n",
+    "\n",
+    "        if self.use_bn:\n",
+    "            self.bn = nn.BatchNorm1d(self.out_features)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.linear(x)\n",
+    "        if self.use_bn:\n",
+    "            x = self.bn(x)\n",
+    "        return x\n",
+    "    \n",
+    "class ProjectionHead(nn.Module):\n",
+    "    def __init__(self,\n",
+    "                 in_features,\n",
+    "                 hidden_features,\n",
+    "                 out_features,\n",
+    "                 head_type = 'nonlinear',\n",
+    "                 **kwargs):\n",
+    "        super(ProjectionHead, self).__init__(**kwargs)\n",
+    "        self.in_features = in_features\n",
+    "        self.out_features = out_features\n",
+    "        self.hidden_features = hidden_features\n",
+    "        self.head_type = head_type\n",
+    "\n",
+    "        if self.head_type == 'linear':\n",
+    "            self.layers = LinearLayer(self.in_features, self.out_features, False, True)\n",
+    "        elif self.head_type =='nonlinear':\n",
+    "            self.layers = nn.Sequential(LinearLayer(self.in_features, self.hidden_features, True, True),\n",
+    "                                        nn.ReLU(),\n",
+    "                                        LinearLayer(self.hidden_features, self.out_features, False, True))\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.layers(x)\n",
+    "        return x\n",
+    "    \n",
+    "class PreModel(nn.Module):\n",
+    "    def __init__(self, base_model):\n",
+    "        super().__init__()\n",
+    "        self.base_model = base_model\n",
+    "\n",
+    "        #PRETRAINED MODEL\n",
+    "        self.pretrained = models.resnet50(pretrained = True)\n",
+    "\n",
+    "        self.pretrained.conv1 = nn.Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), bias=False)\n",
+    "        self.pretrained.maxpool = Identity()\n",
+    "\n",
+    "        self.pretrained.fc = Identity()\n",
+    "\n",
+    "        for p in self.pretrained.parameters():\n",
+    "            p.requires_grad = True\n",
+    "\n",
+    "        self.projector = ProjectionHead(2048, 2048, 128)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.pretrained(x)\n",
+    "        xp = self.projector(torch.squeeze(out))\n",
+    "        return xp"
    ]
   },
   {
