--- a/GSDSimCLR.ipynb
+++ b/GSDSimCLR.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "torch.Size([256, 3, 224, 224])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,6 +266,304 @@
     "        out = self.pretrained(x)\n",
     "        xp = self.projector(torch.squeeze(out))\n",
     "        return xp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aarya/miniconda3/envs/pyTorch/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/aarya/miniconda3/envs/pyTorch/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/resnet50-0676ba61.pth\" to /home/aarya/.cache/torch/hub/checkpoints/resnet50-0676ba61.pth\n",
+      "100%|██████████| 97.8M/97.8M [00:03<00:00, 30.4MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = PreModel('resnet50').to('cuda:0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Loss Function \n",
+    "- SimCLR Loss function picked up from Spijkervet/SimCLR on GitHub."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimCLR_Loss(nn.Module):\n",
+    "    def __init__(self, batch_size, temperature):\n",
+    "        super().__init__()\n",
+    "        self.batch_size = batch_size\n",
+    "        self.temperature = temperature\n",
+    "\n",
+    "        self.mask = self.mask_correlated_samples(batch_size)\n",
+    "        self.criterion = nn.CrossEntropyLoss(reduction=\"sum\")\n",
+    "        self.similarity_f = nn.CosineSimilarity(dim=2)\n",
+    "\n",
+    "    def mask_correlated_samples(self, batch_size):\n",
+    "        N = 2 * batch_size\n",
+    "        mask = torch.ones((N, N), dtype=bool)\n",
+    "        mask = mask.fill_diagonal_(0)\n",
+    "        for i in range(batch_size):\n",
+    "            mask[i, batch_size + i] = 0\n",
+    "            mask[batch_size +i, i] = 0\n",
+    "        return mask\n",
+    "    \n",
+    "    def forward(self, z_i, z_j):\n",
+    "        N = 2 * self.batch_size\n",
+    "\n",
+    "        z = torch.cat((z_i, z_j), dim=0)\n",
+    "\n",
+    "        sim = self.similarity_f(z.unsqueeze(1), z.unsqueeze(0)) / self.temperature\n",
+    "\n",
+    "        sim_i_j = torch.diag(sim, self.batch_size)\n",
+    "        sim_j_i = torch.diag(sim, -self.batch_size)\n",
+    "        positive_samples = torch.cat((sim_i_j, sim_j_i), dim=0).reshape(N, 1)\n",
+    "        negative_samples = sim[self.mask].reshape(N, -1)\n",
+    "        labels = torch.from_numpy(np.array([0]*N)).reshape(-1).to(positive_samples.device).long()\n",
+    "        \n",
+    "        logits = torch.cat((positive_samples, negative_samples), dim=1)\n",
+    "        loss = self.criterion(logits, labels)\n",
+    "        loss /= N\n",
+    "        \n",
+    "        return loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Optimizer\n",
+    "- LARS\n",
+    "- Learning Rate - 0.2\n",
+    "- Linear warmup for 10 epochs, and then a cosine decay schedule.\n",
+    "- Picked up from Spijkervet/SimCLR on GitHub."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.optim.optimizer import Optimizer, required\n",
+    "import re\n",
+    "\n",
+    "EETA_DEFAULT = 0.001\n",
+    "\n",
+    "\n",
+    "class LARS(Optimizer):\n",
+    "    \"\"\"\n",
+    "    Layer-wise Adaptive Rate Scaling for large batch training.\n",
+    "    Introduced by \"Large Batch Training of Convolutional Networks\" by Y. You,\n",
+    "    I. Gitman, and B. Ginsburg. (https://arxiv.org/abs/1708.03888)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        params,\n",
+    "        lr=required,\n",
+    "        momentum=0.9,\n",
+    "        use_nesterov=False,\n",
+    "        weight_decay=0.0,\n",
+    "        exclude_from_weight_decay=None,\n",
+    "        exclude_from_layer_adaptation=None,\n",
+    "        classic_momentum=True,\n",
+    "        eeta=EETA_DEFAULT,\n",
+    "    ):\n",
+    "        \"\"\"Constructs a LARSOptimizer.\n",
+    "        Args:\n",
+    "        lr: A `float` for learning rate.\n",
+    "        momentum: A `float` for momentum.\n",
+    "        use_nesterov: A 'Boolean' for whether to use nesterov momentum.\n",
+    "        weight_decay: A `float` for weight decay.\n",
+    "        exclude_from_weight_decay: A list of `string` for variable screening, if\n",
+    "            any of the string appears in a variable's name, the variable will be\n",
+    "            excluded for computing weight decay. For example, one could specify\n",
+    "            the list like ['batch_normalization', 'bias'] to exclude BN and bias\n",
+    "            from weight decay.\n",
+    "        exclude_from_layer_adaptation: Similar to exclude_from_weight_decay, but\n",
+    "            for layer adaptation. If it is None, it will be defaulted the same as\n",
+    "            exclude_from_weight_decay.\n",
+    "        classic_momentum: A `boolean` for whether to use classic (or popular)\n",
+    "            momentum. The learning rate is applied during momeuntum update in\n",
+    "            classic momentum, but after momentum for popular momentum.\n",
+    "        eeta: A `float` for scaling of learning rate when computing trust ratio.\n",
+    "        name: The name for the scope.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self.epoch = 0\n",
+    "        defaults = dict(\n",
+    "            lr=lr,\n",
+    "            momentum=momentum,\n",
+    "            use_nesterov=use_nesterov,\n",
+    "            weight_decay=weight_decay,\n",
+    "            exclude_from_weight_decay=exclude_from_weight_decay,\n",
+    "            exclude_from_layer_adaptation=exclude_from_layer_adaptation,\n",
+    "            classic_momentum=classic_momentum,\n",
+    "            eeta=eeta,\n",
+    "        )\n",
+    "\n",
+    "        super(LARS, self).__init__(params, defaults)\n",
+    "        self.lr = lr\n",
+    "        self.momentum = momentum\n",
+    "        self.weight_decay = weight_decay\n",
+    "        self.use_nesterov = use_nesterov\n",
+    "        self.classic_momentum = classic_momentum\n",
+    "        self.eeta = eeta\n",
+    "        self.exclude_from_weight_decay = exclude_from_weight_decay\n",
+    "        # exclude_from_layer_adaptation is set to exclude_from_weight_decay if the\n",
+    "        # arg is None.\n",
+    "        if exclude_from_layer_adaptation:\n",
+    "            self.exclude_from_layer_adaptation = exclude_from_layer_adaptation\n",
+    "        else:\n",
+    "            self.exclude_from_layer_adaptation = exclude_from_weight_decay\n",
+    "\n",
+    "    def step(self, epoch=None, closure=None):\n",
+    "        loss = None\n",
+    "        if closure is not None:\n",
+    "            loss = closure()\n",
+    "\n",
+    "        if epoch is None:\n",
+    "            epoch = self.epoch\n",
+    "            self.epoch += 1\n",
+    "\n",
+    "        for group in self.param_groups:\n",
+    "            weight_decay = group[\"weight_decay\"]\n",
+    "            momentum = group[\"momentum\"]\n",
+    "            eeta = group[\"eeta\"]\n",
+    "            lr = group[\"lr\"]\n",
+    "\n",
+    "            for p in group[\"params\"]:\n",
+    "                if p.grad is None:\n",
+    "                    continue\n",
+    "\n",
+    "                param = p.data\n",
+    "                grad = p.grad.data\n",
+    "\n",
+    "                param_state = self.state[p]\n",
+    "\n",
+    "                # TODO: get param names\n",
+    "                # if self._use_weight_decay(param_name):\n",
+    "                grad += self.weight_decay * param\n",
+    "\n",
+    "                if self.classic_momentum:\n",
+    "                    trust_ratio = 1.0\n",
+    "\n",
+    "                    # TODO: get param names\n",
+    "                    # if self._do_layer_adaptation(param_name):\n",
+    "                    w_norm = torch.norm(param)\n",
+    "                    g_norm = torch.norm(grad)\n",
+    "\n",
+    "                    device = g_norm.get_device()\n",
+    "                    trust_ratio = torch.where(\n",
+    "                        w_norm.gt(0),\n",
+    "                        torch.where(\n",
+    "                            g_norm.gt(0),\n",
+    "                            (self.eeta * w_norm / g_norm),\n",
+    "                            torch.Tensor([1.0]).to(device),\n",
+    "                        ),\n",
+    "                        torch.Tensor([1.0]).to(device),\n",
+    "                    ).item()\n",
+    "\n",
+    "                    scaled_lr = lr * trust_ratio\n",
+    "                    if \"momentum_buffer\" not in param_state:\n",
+    "                        next_v = param_state[\"momentum_buffer\"] = torch.zeros_like(\n",
+    "                            p.data\n",
+    "                        )\n",
+    "                    else:\n",
+    "                        next_v = param_state[\"momentum_buffer\"]\n",
+    "\n",
+    "                    next_v.mul_(momentum).add_(scaled_lr, grad)\n",
+    "                    if self.use_nesterov:\n",
+    "                        update = (self.momentum * next_v) + (scaled_lr * grad)\n",
+    "                    else:\n",
+    "                        update = next_v\n",
+    "\n",
+    "                    p.data.add_(-update)\n",
+    "                else:\n",
+    "                    raise NotImplementedError\n",
+    "\n",
+    "        return loss\n",
+    "\n",
+    "    def _use_weight_decay(self, param_name):\n",
+    "        \"\"\"Whether to use L2 weight decay for `param_name`.\"\"\"\n",
+    "        if not self.weight_decay:\n",
+    "            return False\n",
+    "        if self.exclude_from_weight_decay:\n",
+    "            for r in self.exclude_from_weight_decay:\n",
+    "                if re.search(r, param_name) is not None:\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "    def _do_layer_adaptation(self, param_name):\n",
+    "        \"\"\"Whether to do layer-wise learning rate adaptation for `param_name`.\"\"\"\n",
+    "        if self.exclude_from_layer_adaptation:\n",
+    "            for r in self.exclude_from_layer_adaptation:\n",
+    "                if re.search(r, param_name) is not None:\n",
+    "                    return False\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 2.0000e-02.\n",
+      "Epoch 00000: adjusting learning rate of group 0 to 2.0000e-01.\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = LARS(\n",
+    "    [params for params in model.parameters() if params.requires_grad],\n",
+    "    lr=0.2,\n",
+    "    weight_decay=1e-6,\n",
+    "    exclude_from_weight_decay=[\"batch_normalization\", \"bias\"],\n",
+    ")\n",
+    "\n",
+    "# \"decay the learning rate with the cosine decay schedule without restarts\"\n",
+    "#SCHEDULER OR LINEAR EWARMUP\n",
+    "warmupscheduler = torch.optim.lr_scheduler.LambdaLR(optimizer, lambda epoch : (epoch+1)/10.0, verbose = True)\n",
+    "\n",
+    "#SCHEDULER FOR COSINE DECAY\n",
+    "mainscheduler = torch.optim.lr_scheduler.CosineAnnealingWarmRestarts(optimizer, 500, eta_min=0.05, last_epoch=-1, verbose = True)\n",
+    "\n",
+    "#LOSS FUNCTION\n",
+    "criterion = SimCLR_Loss(batch_size = 128, temperature = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(model, optimizer, scheduler, current_epoch, name):\n",
+    "    out = os.path.join('/content/saved_models/',name.format(current_epoch))\n",
+    "\n",
+    "    torch.save({'model_state_dict': model.state_dict(),\n",
+    "                'optimizer_state_dict': optimizer.state_dict(),\n",
+    "                'scheduler_state_dict':scheduler.state_dict()}, out)\n"
    ]
   },
   {
