corrected:mean,std

--- a/MoCo_Trials/labeled_Aarya/MoCoLabeledAarya.ipynb
+++ b/MoCo_Trials/labeled_Aarya/MoCoLabeledAarya.ipynb
@@ -84,12 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MEAN = [0.47365573, 0.4402452, 0.38663769]\n",
-    "STD = [0.26914782, 0.26083042, 0.2624779]"
+    "MEAN = [0.5435, 0.5091, 0.4462]\n",
+    "STD = [0.2979, 0.2869, 0.2920]"
    ]
   },
   {
