--- a/MoCo_Trials/labeled_Aarya/MoCoLabeledAarya.ipynb
+++ b/MoCo_Trials/labeled_Aarya/MoCoLabeledAarya.ipynb
@@ -15,11 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Code utilities\n",
     "import logging\n",
     "import os \n",
     "import random\n",
     "from functools import partial\n",
     "\n",
+    "#Core libraries\n",
     "import torch\n",
     "from PIL import ImageFilter\n",
     "from torchvision import datasets, transforms\n",
@@ -27,11 +29,12 @@
     "from tqdm import tqdm \n",
     "import numpy as np\n",
     "\n",
+    "#Metric learning utilities\n",
     "from pytorch_metric_learning import losses\n",
     "from pytorch_metric_learning.utils import logging_presets\n",
     "\n",
+    "#Configurations\n",
     "logging.getLogger().setLevel(logging.INFO)\n",
-    "\n",
     "device = torch.device(\"cuda\")"
    ]
   },
@@ -51,7 +54,8 @@
    "outputs": [],
    "source": [
     "class TwoCropsTransform:\n",
-    "    \"\"\"Take two random crops of one image as the query and key.\"\"\"\n",
+    "    \"\"\"Take two random crops of one image as the query and key.\n",
+    "       Expects a torch tensor as an arguement in __call__(x) function and returns a list of 2 torch tensors.\"\"\"\n",
     "\n",
     "    def __init__(self, base_transform):\n",
     "        self.base_transform = base_transform\n",
@@ -62,7 +66,8 @@
     "        return [q, k]\n",
     "    \n",
     "class GaussianBlur(object):\n",
-    "    \"\"\"Gaussian blur augmentation in SimCLR https://arxiv.org/abs/2002.05709\"\"\"\n",
+    "    \"\"\"Gaussian blur augmentation in SimCLR https://arxiv.org/abs/2002.05709\n",
+    "       Expects a PIL Image as an arguement in __call__(x) function and returns Gaussian Blur applied PIL image.\"\"\"\n",
     "\n",
     "    def __init__(self, sigma=[0.1, 2.0]):\n",
     "        self.sigma = sigma\n",
@@ -88,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculated MEAN and STANDARD DEVIATION values from normalization_params.ipynb\n",
     "MEAN = [0.5435, 0.5091, 0.4462]\n",
     "STD = [0.2979, 0.2869, 0.2920]"
    ]
